# opengl

./: CMakeLists.txt
res/shaders/: basic.frag
src/: File.cpp  File.h  main.cpp
